--- a/GPR_generate_insulin_data.ipynb
+++ b/GPR_generate_insulin_data.ipynb
@@ -66,7 +66,7 @@
     }
    ],
    "source": [
-    "#### This cell is for the 3D MODEL.\n",
+    "#### This cell is for the fig1. For generating GPR samples for simulated data, please go to next cells.\n",
     "import torch\n",
     "import gpytorch\n",
     "import pandas as pd\n",
@@ -175,11 +175,7 @@
    "id": "bb73e799",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#### This cell is for the 3D MODEL.\n",
-    "# Save samples to a MATLAB-compatible mat file as double precision\n",
-    "savemat('*****SAVE YOUR INSULIN GPR SAMPLES for the 3D MODEL HERE****.mat', {'samples': new_samples_rescaled_double.numpy()})\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -188,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Above is for 3D model\n",
+    "### Above is for fig1\n",
     "\n",
     "######## SEPARATION LINE #############\n",
     "######## SEPARATION LINE #############\n",
@@ -197,7 +193,7 @@
     "######## SEPARATION LINE #############\n",
     "######## SEPARATION LINE #############\n",
     "\n",
-    "### Below is for 2D model"
+    "### Below is for the 3D and 2D models"
    ]
   },
   {
@@ -207,7 +203,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### This cell is for the 2D MODEL.\n",
     "import math\n",
     "import torch\n",
     "import gpytorch\n",
@@ -315,7 +310,7 @@
     "    likelihood.eval()\n",
     "\n",
     "    num_samples = 300\n",
-    "    total_samples = 1000000\n",
+    "    total_samples = 5000000\n",
     "\n",
     "    with torch.no_grad(), gpytorch.settings.fast_pred_var():\n",
     "        test_x = train_x\n",
@@ -331,10 +326,21 @@
     "\n",
     "    new_samples_rescaled = torch.exp(new_samples * train_std + train_mean)\n",
     "\n",
+    "    # Save samples to a MATLAB-compatible mat file\n",
+    "#     savemat('samples.mat', {'samples': new_samples_rescaled.numpy()})\n",
+    "\n",
     "    print(new_samples_rescaled.shape)\n",
     "\n",
+    "\n",
+    "    # Convert new_samples_rescaled to double precision\n",
     "    new_samples_rescaled_double = new_samples_rescaled.double()\n",
     "\n",
+    "    # Save samples to a MATLAB-compatible mat file as double precision\n",
+    "#     savemat('5millionInsulinGPRsamples_230529.mat', {'samples': new_samples_rescaled_double.numpy()})\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
     "    xdatanp = np.array(train_x.unsqueeze(0))\n",
     "    # Plot the new samples\n",
     "    f, axs = plt.subplots(3, 1, figsize=(10, 18))\n",
@@ -416,7 +422,7 @@
     "# })\n",
     "\n",
     "# Save samples to a MATLAB-compatible mat file as double precision\n",
-    "savemat('*****SAVE YOUR INSULIN GPR SAMPLES for the 2D MODEL HERE****.mat', {'samples': new_samples_rescaled_double.numpy()})\n"
+    "savemat('*****SAVE YOUR INSULIN GPR SAMPLES HERE****.mat', {'samples': new_samples_rescaled_double.numpy()})\n"
    ]
   }
  ],
